add sistema de autentição com JWT para atualização dos estados dos planos
