# controller/plano_acao_controller.go
@@ -103,3 +103,53 @@ func (c *PlanoAcaoController) getIdParam(ctx *gin.Context) int {
 	id, _ := strconv.Atoi(idStr)
 	return id
 }
+
+// Struct para ler o JSON que o frontend vai enviar
+type UpdateStatusRequest struct {
+	Situacao string `json:"situacao" binding:"required"`
+}
+
+// UpdateStatus godoc
+// @Summary      Atualiza Status da Ação
+// @Description  Atualiza a situação de um plano de ação e gera log de auditoria
+// @Tags         Planos de Ação
+// @Accept       json
+// @Produce      json
+// @Security     BearerAuth
+// @Param        acaoId   path      int                  true  "ID da Ação"
+// @Param        status   body      UpdateStatusRequest  true  "Novo Status"
+// @Success      200      {object}  map[string]string
+// @Router       /reservatorios/{reservatorioId}/action-plans/{acaoId}/status [put]
+func (c *PlanoAcaoController) UpdateStatus(ctx *gin.Context) {
+	// Pega o ID da ação da URL
+	acaoIdStr := ctx.Param("acaoId")
+	acaoId, err := strconv.ParseUint(acaoIdStr, 10, 32)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "ID da ação inválido"})
+		return
+	}
+
+	// Lê o corpo da requisição (JSON)
+	var req UpdateStatusRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "O campo 'situacao' é obrigatório"})
+		return
+	}
+
+	// Pega o ID do usuário que foi injetado pelo AuthMiddleware
+	usuarioIdInterface, exists := ctx.Get("usuario_id")
+	if !exists {
+		ctx.JSON(http.StatusUnauthorized, gin.H{"error": "Usuário não identificado na sessão"})
+		return
+	}
+	// Faz o cast para uint (tipo que definimos no banco)
+	usuarioId := usuarioIdInterface.(uint)
+
+	// Chama o caso de uso
+	if err := c.useCase.AtualizarStatus(uint(acaoId), usuarioId, req.Situacao); err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "Falha ao atualizar o status: " + err.Error()})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, gin.H{"message": "Status da ação atualizado com sucesso!"})
+}
